This is a history of changes that affect users and maintainers of
proiel-webapp. It does not list all changes; see the git history for that.

1.8.0   not released

  - Changed default production web server from thin to unicorn.

1.7.0   13/02/2016

  - Removed "Downloads" page.
  - Added language-specific tokenization patterns to make repetitive
    token splitting less tedious.

1.6.0   28/10/2015

  - Removed plugin system --- it was never used much.
  - Removed link mapper for Bibelen.no as site no longer uses predictable
    URLs.
  - Renamed Biblos link mapper to Biblehub.
  - Removed JSON importer and exporter. This functionality was never
    completed.
  - Added option to write an ID mapping file if importing PROIEL XML with
    existing ID attributes.
  - The following functionality has been removed and delegated to proiel-cli:
      - automatic validation of exported files
      - option to export only reviewed sentences (note that this also
        means that the files that can be downloaded from the 'Downloads'
        area now contain both reviewed and unreviewed data)
      - TigerXML and Tiger2 exporters
      - raw text importer

1.5.3   10/08/2015

  - Optimized loading of text division view
  - Updated Norse morphology

1.5.2   07/08/2015

  - Bug fixes

1.5.1   13/07/2015

  - Bug fixes
  - Show glosses in lemma views.

1.5.0   20/05/2015

  - Upgraded to Rails branch 3-2-stable (Rails 3.2.21 + additional patches).
  - Moved help pages and additional documentation to the project's github
    wiki.
  - Added rack-profiler to development instances.
  - Restricted changelog display to last week's changes.
  - Restricted search results to 5,000 results.
  - Exporter job by default now runs every week instead of every day.
  - Removed CoNLL and text exporters. PROIEL XML can now be converted to
    these formats by using the PROIEL command-line utilities.

1.4.1   07/08/2015

  - Bug fixes
  - Updated Norse morphology
  - Support for OS X Mavericks
