@@ -7,9 +7,6 @@ Proiel::Application.configure do
   # If true, will log changes to annotation objects in the changelog.
   config.auditing = true
 
-  # The location for exported files.
-  config.export_directory_path = Rails.root.join('public', 'exports')
-
   # The location for tagset files.
   config.tagset_file_path = Rails.root.join('config', 'tagsets')
 
